启动参数变更